--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Engineer Ashik </span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam illo quibusdam, repudiandae aspernatur
+                numquam
+                inventore ducimus neque non accusantium explicabo!</p>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/engineer-ashik-billah-a68324243/">Click Me</a>
+        </div>
+        <div class="half-width">
+            <img src="me/ashik1.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
