--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
                 href="https://www.linkedin.com/in/engineer-ashik-billah-a68324243/">Click Me</a>
         </div>
         <div class="half-width">
-            <img src="me/ashik1.png" alt="">
+            <img src="images/me/ashik2.png" alt="">
+        </div>
+    </section>
+    <section class="big-dream">
+        <div class="half-width">
+            <img src="images/me/ashik2.png" alt="">
+        </div>
+        <div>
+            <h1>Dream Big</h1>
+            <h1><span class="orange-color">Become a web developer </span> World</h1>
+            <h1>Dream Big</h1>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis fugit rerum minima asperiores ipsum?
+                Dignissimos commodi odit enim architecto modi.</p>
+            <a class="link-button" href="https://www.google.com/docs/about/">Google</a>
+
         </div>
     </section>
 </body>
