--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Digital Marketer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,35 +13,75 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-color">Engineer Ashik </span> World</h1>
+            <h1><span class="orange-color">Shawon Mahmud </span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam illo quibusdam, repudiandae aspernatur
-                numquam
-                inventore ducimus neque non accusantium explicabo!</p>
-            <a class="link-button" target="_blank"
-                href="https://www.linkedin.com/in/engineer-ashik-billah-a68324243/">Click Me</a>
+            <p>Learning Digital Marketing will gain you a skill-set that will be quite beneficial to your career – be it
+                a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you want to be;
+
+                Become an entrepreneur
+                Become Freelancer offering Digital Marketing services
+                Turn into a Digital Marketing Trainer
+                or Earn money online via Blogging or Affiliate networks!</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/alimahmudshaown">Click Me Facebook</a>
         </div>
         <div class="half-width">
-            <img src="images/me/ashik2.png" alt="">
+            <img src="images/me/my-bg.png" alt="">
         </div>
     </section>
-    <section class="big-dream">
+    <section class="big-dream flexible-container">
         <div class="half-width">
-            <img src="images/me/ashik2.png" alt="">
+            <img src="images/me/my-bg.png" alt="">
         </div>
         <div>
             <h1>Dream Big</h1>
-            <h1><span class="orange-color">Become a web developer </span> World</h1>
-            <h1>Dream Big</h1>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis fugit rerum minima asperiores ipsum?
-                Dignissimos commodi odit enim architecto modi.</p>
-            <a class="link-button" href="https://www.google.com/docs/about/">Google</a>
+            <h1><span class="orange-color">Become a Digital Marketer </span> World</h1>
+            <p>Learning Digital Marketing will gain you a skill-set that will be quite beneficial to your career – be it
+                a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you want to be;
 
+                Become an entrepreneur
+                Become Freelancer offering Digital Marketing services
+                Turn into a Digital Marketing Trainer
+                or Earn money online via Blogging or Affiliate networks</p>
+            <a class="link-button" href="https://www.facebook.com/alimahmudshaown">Click Here</a>
         </div>
     </section>
+
+    <section class="Exprence-area">
+        <h2>Exprence</h2>
+        <div class="flexible-container">
+            <div id="web-developer" class=" experience-item ">
+                <h1>Full Stack Digital Marketer</h1>
+                <h3 class="orange-color">2022 | 2024 Become a Digital Marketer</h3>
+                <p>Learning Digital Marketing will gain you a skill-set that will be quite beneficial to your career –
+                    be it a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you want
+                    to be;
+
+                    Become an entrepreneur
+                    Become Freelancer offering Digital Marketing services
+                    Turn into a Digital Marketing Trainer
+                    or Earn money online via Blogging or Affiliate networks</p>
+            </div>
+
+            <div id="web-developer-dev" class="experience-item ">
+                <h1>Baby Digital Marketer</h1>
+                <h3 class="orange-color">2022 | 2024 Become a Digital Marketer</h3>
+                <p>Learning Digital Marketing will gain you a skill-set that will be quite beneficial to your career –
+                    be it a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you want
+                    to be;
+
+                    Become an entrepreneur
+                    Become Freelancer offering Digital Marketing services
+                    Turn into a Digital Marketing Trainer
+                    or Earn money online via Blogging or Affiliate networks!</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>@ Digital marketer all reserved 2022</p>
+    </footer>
 </body>
 
 </html>
