--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Marketer</title>
+    <link rel="shortcut icon" href="images/me/my-bg2.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,13 +19,14 @@
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Shawon Mahmud </span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>Learning Digital Marketing will gain you a skill-set that will be quite beneficial to your career – be it
-                a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you want to be;
+            <p>Learning Digital Marketing will gain you a skill-set that will be quite beneficial to your career
+                – be it a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you
+                want to be;
 
                 Become an entrepreneur
                 Become Freelancer offering Digital Marketing services
                 Turn into a Digital Marketing Trainer
-                or Earn money online via Blogging or Affiliate networks!</p>
+                or Earn money online via Blogging or Affiliate networks</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/alimahmudshaown">Click Me Facebook</a>
         </div>
         <div class="half-width">
@@ -38,13 +40,10 @@
         <div>
             <h1>Dream Big</h1>
             <h1><span class="orange-color">Become a Digital Marketer </span> World</h1>
-            <p>Learning Digital Marketing will gain you a skill-set that will be quite beneficial to your career – be it
-                a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you want to be;
-
-                Become an entrepreneur
-                Become Freelancer offering Digital Marketing services
-                Turn into a Digital Marketing Trainer
-                or Earn money online via Blogging or Affiliate networks</p>
+            <p> Learning Digital Marketing will gain you a skill-set that will be <br> quite beneficial to your career –
+                be
+                it a full time or freelancing job. It is up to you to pick what sort of Digital Marketer you want to be;
+            </p>
             <a class="link-button" href="https://www.facebook.com/alimahmudshaown">Click Here</a>
         </div>
     </section>
